# buildspace-solutions

./: .gitignore  README.md  cache.json  config.json  craco.config.js  flow.json  netlify.toml  package.json
mint-tokens-for-users/: .gitignore  Cargo.toml  README.md
mint-tokens-for-users/client/solana-movie-frontend/: package-lock.json  package.json
mint-tokens-for-users/client/solana-movie-frontend/components/: CommentList.tsx  Form.tsx  MovieList.tsx  ReviewDetail.tsx  WalletContextProvider.tsx
mint-tokens-for-users/client/solana-movie-frontend/coordinators/: CommentCoordinator.ts  MovieCoordinator.ts
mint-tokens-for-users/client/solana-movie-frontend/models/: Movie.ts
mint-tokens-for-users/client/solana-movie-frontend/utils/: constants.ts
mint-tokens-for-users/client/solana-movie-token-client/: package-lock.json  package.json
mint-tokens-for-users/client/solana-movie-token-client/src/: index.ts  initializeKeypair.ts
mint-tokens-for-users/src/: error.rs  instruction.rs  processor.rs  state.rs
movie-review-comments/: Cargo.toml  README.md  temp-keypair.json
movie-review-comments/client/solana-movie-frontend/: package-lock.json  package.json
movie-review-comments/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
solana-nft-staking-program/: Cargo.toml  README.md
solana-nft-staking-program/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
solana-nft-staking-program/ts/: README.md  accounts.ts  constants.ts  index.ts  instructions.ts  package-lock.json  package.json  setup.ts
solana-nft-staking-program/ts/src/: index.ts
testing-solana-programs/: Cargo.toml  README.md
testing-solana-programs/src/: error.rs  instruction.rs  processor.rs
(+298 files in other folders)
