[package]
name = "solana-nft-staking-program"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
mpl-token-metadata = { version = "1.3.6", features = ["no-entrypoint"] }
solana-program = "1.11.10"
spl-token = "3.5.0"
thiserror = "1.0.34"

[lib]
crate-type = ["cdylib", "lib"]

